# basicActiveObjectDemo

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
apps/: CMakeLists.txt
apps/demoPcApp/: CMakeLists.txt  main.cpp
core/: CMakeLists.txt
core/activeObject/include/: cmsActiveObject.hpp  cmsStdActiveObject.hpp
core/activeObject/test/: CMakeLists.txt  TestStdActiveObject.cpp  TestStdActiveObject.hpp  cmsActiveObjectTests.cpp
core/fauxRTOS/: CMakeLists.txt
core/fauxRTOS/include/: fauxQueue.h  fauxThread.h
core/fauxRTOS/src/: fauxQueue.cpp  fauxThread.cpp
core/flatStateMachine/include/: cmsFlatStateMachine.hpp
core/flatStateMachine/test/: CMakeLists.txt  testEvent.hpp
core/include/: cmsBaseEvent.hpp  cmsExecutionOption.h  cmsStandardSignals.hpp
drivers/: CMakeLists.txt
drivers/hwLockCtrl/: CMakeLists.txt
drivers/hwLockCtrl/include/: hwLockCtrl.h
drivers/hwLockCtrl/src/: hwLockCtrl.c
drivers/lockCtrl/: CMakeLists.txt
drivers/lockCtrl/include/: lockCtrl.h
drivers/lockCtrl/src/: lockCtrl.cpp
services/: CMakeLists.txt
services/hwLockCtrlService/: CMakeLists.txt
services/hwLockCtrlService/include/: hwLockCtrlService.h  hwLockCtrlService.hpp
services/hwLockCtrlService/src/: hwLockCtrlService.c  hwLockCtrlService.cpp
services/hwLockCtrlService/test/: CMakeLists.txt  hwLockCtrlServiceTests.cpp
services/include/: servicesActiveObjectType.hpp  servicesCommonEventType.hpp
services/lockCtrlService/: CMakeLists.txt
services/lockCtrlService/include/: hwLockCtrlService.hpp  lockCtrlService.hpp
services/lockCtrlService/src/: lockCtrlService.cpp
services/lockCtrlService/test/: CMakeLists.txt  hwLockCtrlServiceTests.cpp  lockCtrlServiceTests.cpp
test/mocks/hwLockCtrl/: mockHwLockCtrl.cpp
test/mocks/lockCtrl/: mockLockCtrl.cpp
utils/: CMakeLists.txt
utils/activeObject/: CMakeLists.txt
utils/activeObject/include/: cmsActiveObject.hpp
utils/activeObject/test/: CMakeLists.txt
utils/flatStateMachine/: CMakeLists.txt
utils/flatStateMachine/include/: cmsBaseEvent.hpp  cmsFlatStateMachine.hpp  cmsStandardSignals.hpp
utils/flatStateMachine/test/: CMakeLists.txt  cmsFlatStateMachineTests.cpp  main.cpp  testEvent.hpp  testFlatStateMachine.cpp  testFlatStateMachine.hpp  testSignals.hpp
utils/include/: cmsTypeUtils.hpp
